refactor(carddemo-app): rewrite CloseFileApp to use BatchRunContext + ScopedValue
Replaces the prior CloseFileApp implementation with one that follows the
file's schema and the agent-prompt-mandated AAP requirements:

- Exposes a public static final ScopedValue<BatchRunContext> BATCH_CTX
  field (JEP 506 finalized in Java 25) so this app's batch-run context
  flows identically to all other JCL-step translations.
- Builds the BatchRunContext at main() entry via
  BatchRunContext.fromEnvironment() and binds it via
  ScopedValue.where(BATCH_CTX, ctx).call(CloseFileApp::execute).
- Maps the int return code to a process exit code via a pattern-matching
  switch expression (JEP 441) with exhaustive coverage; no default branch.
- Uses 'import module java.base;' (JEP 511 finalized in Java 25) per
  AAP \u00a70.4.2.
- @CobolProgram traceability annotation cites SDSF (CLOSEFIL.jcl) at
  app/jcl/CLOSEFIL.jcl with translationDate 2025-10-24 per AAP \u00a70.7.1.
- Preserves the five CICS file identifiers (TRANSACT, CCXREF, ACCTDAT,
  CXACAIX, USRSEC) verbatim and in declaration order from the source JCL.
- Logs job start (with runId/processingDate/tenant), one INFO line per
  CICS file ID acknowledging the close intent, and job completion via
  SLF4J. No card PAN appears in any log statement.
- Per AAP \u00a70.6.12 architectural override, the SDSF/CEMT mechanism is
  replaced by a logging-only no-op: the file-based Java runtime has no
  CICS region to send modify commands to.

No Spring, no preview features, no ThreadLocal, no java.io.File, no
java.util.Date/Calendar.

Validated via:
  mvn -B -ntp clean verify   -> BUILD SUCCESS, 119 tests pass
  10 ad-hoc reflection tests -> all PASS (file cleaned up before commit)
  java -jar carddemo-app-shaded.jar com.blitzy.carddemo.app.CloseFileApp
    -> exit code 0; 5 CICS files acknowledged; full JVM tuning flags
       (-XX:+UseCompactObjectHeaders -XX:+UseShenandoahGC
        -XX:ShenandoahGCMode=generational) also verified end-to-end